--- a/.github/workflows/01-manual-exec.yaml
+++ b/.github/workflows/01-manual-exec.yaml
@@ -1,43 +1,41 @@
 # CI de Nível 01 - Disparo manual a partir de 1 clique
 
-#nome do nosso 'pipeline'
+# Nome do nosso 'pipeline'
 name: 'Execução Manual'
 
-# regras de disparo (gatilhos/triggers)
-# gatilho de exec manual = workflow_dispatch
-
+# Regras de disparo (gatilhos/triggers)
+# Gatilho de execução manual = workflow_dispatch
 on:
   workflow_dispatch:
 
-  # trabalhos/tarefas dentro do pipeline = jobs
-  jobs: 
-    e2e-tests:
+# Trabalhos/tarefas dentro do pipeline = jobs
+jobs: 
+  e2e-tests:
+    # Máquina que o job vai executar
+    runs-on: ubuntu-latest
 
-      # maquina que o job vai executar
-      runs-on: ubuntu-latest
+    # Passos do script de build
+    steps:
+      # Clone do projeto
+      - uses: actions/checkout@v4
 
-      # passos do script de build
-      steps:
-        # clone do projeto
-        - uses: actions/checkout@v4
+      # Instalação do Node
+      - uses: actions/setup-node@v4
+        with: 
+          node-version: 22.x
 
-        #instalacao do node
-        - uses: actions/setup-node@v4
-          with: 
-            node-version: 22.x
+      # Instalação do Yarn
+      - name: Instalando Yarn
+        run: npm install -g yarn
 
-        #instalacao do Yarn
-        - name: Instalando Yarn
-          run: npm install -g yarn
+      # Instalação das dependências
+      - name: Instalando dependências
+        run: yarn
 
-        #instalacao das dependências
-        - name: Instalando dependências
-          run: yarn
+      # Instalação do Playwright
+      - name: Instalando Playwright
+        run: yarn playwright install
 
-        #instalacao do Playwright
-        - name: Instalando Playwright
-          run: yarn playwright install
-
-        # executar os testes e2e
-        - name: Executando Testes E2E
-          run: yarn run e2e
+      # Executar os testes E2E
+      - name: Executando Testes E2E
+        run: yarn run e2e
