--- a/.github/workflows/03-postdeploy-exec.yaml
+++ b/.github/workflows/03-postdeploy-exec.yaml
@@ -17,8 +17,16 @@ on:
 # Trabalhos/tarefas dentro do pipeline = jobs
 jobs: 
   e2e-tests:
+
     # Máquina que o job vai executar
     runs-on: ubuntu-latest
+
+    #condicional -if
+    #`${expressao}`
+
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+
+
 
     # Passos do script de build
     steps:
