--- a/.github/workflows/03-postdeploy-exec.yaml
+++ b/.github/workflows/03-postdeploy-exec.yaml
@@ -56,7 +56,7 @@ jobs:
 
       #Subir o relatório da execução do teste
       - uses: actions/upload-artifact@v4
-        if: {{ !cancelled() }}
+        if: ${{ !cancelled() }}
         with:
           name: relatorio
           path: ./playwright-report
