--- a/.github/workflows/04-integrated-exec.yaml
+++ b/.github/workflows/04-integrated-exec.yaml
@@ -25,7 +25,7 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: action/checkout@V4
+            - uses: actions/checkout@V4
 
             - name: Instalando Yarn
               run: npm install -g yarn
